--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
             <div style='padding-left: 20px'>
                 <ul>
                     <li>
+                        <b>Data Science Intern</b><br>LetsGrowMore, Virtual<br> Aug 2021 - Present <br>
+                        <ol>
+                            <li>Built various models for predicting and classifying data</li>
+                            <li>Performed Data Analysis using Power BI</li>
+                        </ol>
+                    </li>
+                    <br>
+                    <li>
                         <b>IoT And Computer Vision Intern</b><br> The Sparks Foundation, Virtual <br> Jul 2021 - Aug 2021 <br>
                         <ol>
                             <li>Learnt and Built different openCV applications.</li>
