--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
                     <br>
                     <li>
                         <b>Hotel Management System using Python</b> <br>Feb 2021 - Apr 2021<br>
-                        <a href="https://github.com/YashP-0701/Hotel-Management-System-Project-in-Python-
-                        Tkinter-And-MySQL">GitHub Code</a>
+                        <a href="https://github.com/YashP-0701/Hotel-Management-System-Project-in-Python-Tkinter-And-MySQL.git">GitHub Code</a>
                         <p>
                             This project is made purely in Python language and has a MySQL database in the backend.
                         </p>
