--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
                         <b>Bachelor of Engineering (B.E), Information Technology</b><br> Pillai College Of Engineering, New Panvel <br> 2019 - 2023 <br> CGPA: 9.66/10
                     </li>
                     <br>
+                    <table border="1">
+                        <tr>
+                            <th>Semester</th>
+                            <th>SGPA (Pointer)</th>
+                        </tr>
+                        <tr>
+                            <td>1.</td>
+                            <td>8.94</td>
+                        </tr>
+                        <tr>
+                            <td>2.</td>
+                            <td>9.70</td>
+                        </tr>
+                        <tr>
+                            <td>3.</td>
+                            <td>10.00</td>
+                        </tr>
+                        <tr>
+                            <td>4.</td>
+                            <td>10.00</td>
+                        </tr>
+                    </table>
+                    <br>
                     <li>
                         <b>Senior Secondary (XII), Science </b> <br> Terna Vidyalaya And Jr College Nerul (STATE board) <br> Year of completion: 2019 <br> Percentage: 80.77%
                     </li>
@@ -148,7 +171,8 @@
                     <br>
                     <li>
                         <b>Hotel Management System using Python</b> <br>Feb 2021 - Apr 2021<br>
-                        <a href="https://github.com/YashP-0701/Hotel-Management-System-Project-in-Python-Tkinter-And-MySQL.git">GitHub Code</a>
+                        <a href="https://github.com/YashP-0701/Hotel-Management-System-Project-in-Python-
+                        Tkinter-And-MySQL">GitHub Code</a>
                         <p>
                             This project is made purely in Python language and has a MySQL database in the backend.
                         </p>
