--- a/cv-css.html
+++ b/cv-css.html
@@ -16,21 +16,21 @@
         <div class="name-hero">
 
             <div class="me-img"><img src="ProfileImage.png" style="border-radius: 50%;" width="100" height="100"></div>
-            <h1>Yash Ajit Paddalwar</h1>
-            <h4>
+            <h1 class="animate"><b>Yash Ajit Paddalwar</b></h1>
+            <h4 style="padding-right: 10px;">
                 yash9096.p@gmail.com
-                <br> +91 9324066586
-                <br> Navi Mumbai
+                <br>+91 9324066586
+                <br>Navi Mumbai
             </h4>
         </div>
     </div>
     <div class="right">
         <header class="inner">
-            <h3><b>EDUCATION</b></h3>
+            <h3><b class="headings">EDUCATION</b></h3>
             <div style='padding-left: 20px'>
                 <ul>
                     <li>
-                        <b style="color:yellow">Bachelor of Engineering (B.E), Information Technology</b><br> Pillai College Of Engineering, New Panvel <br> 2019 - 2023 <br> CGPA: 9.66/10
+                        <b style="color:yellow;">Bachelor of Engineering (B.E), Information Technology</b><br> Pillai College Of Engineering, New Panvel <br> 2019 - 2023 <br> CGPA: 9.66/10
                     </li>
                     <br>
                     <table border="1">
@@ -69,7 +69,7 @@
     </div>
     <div class="right">
         <header class="inner">
-            <h3><b>INTERNSHIPS</b></h3>
+            <h3><b class="headings">INTERNSHIPS</b></h3>
             <div style='padding-left: 20px'>
                 <ul>
                     <li>
@@ -135,7 +135,7 @@
     </div>
     <div class="right">
         <header class="inner">
-            <h3><b>TRAININGS</b></h3>
+            <h3><b class="headings">TRAININGS</b></h3>
             <div style='padding-left: 20px'>
                 <ul>
                     <br>
@@ -164,7 +164,7 @@
     </div>
     <div class="right">
         <header class="inner">
-            <h3><b>PROJECTS</b></h3>
+            <h3><b class="headings">PROJECTS</b></h3>
             <div style='padding-left: 20px'>
                 <ul>
                     <br>
@@ -194,7 +194,7 @@
     </div>
     <div class="right">
         <header class="inner">
-            <h3><b>SKILLS</b></h3>
+            <h3><b class="headings">SKILLS</b></h3>
             <div class="skill-set">
                 <li>
                     <b>Python</b>
@@ -250,7 +250,7 @@
     <br>
     <div class="right">
         <header class="inner">
-            <h3><b>EXTRA CURRICULAR ACTIVITIES</b></h3>
+            <h3><b class="headings">EXTRA CURRICULAR ACTIVITIES</b></h3>
             <div style='padding-left: 20px'>
                 <ul>
                     <br>
@@ -265,7 +265,7 @@
     <br>
     <div class="right">
         <header class="inner">
-            <h3><b>WORK SAMPLES</b></h3>
+            <h3><b class="headings">WORK SAMPLES</b></h3>
             <div style='padding-left: 20px'>
                 <ul>
                     <li>
@@ -282,7 +282,7 @@
     </div>
     <div class="right">
         <div class="inner">
-            <h3>LOCATION</h3>
+            <h3 class="headings">LOCATION</h3>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1052.4658332707936!2d73.01528914967423!3d19.037782643748653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c3e82f4327b3%3A0x5792ff9221701cbd!2sSector%2010%2C%20Nerul%2C%20Navi%20Mumbai%2C%20Maharashtra%20400706!5e0!3m2!1sen!2sin!4v1629307406251!5m2!1sen!2sin"
                 width="900" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
