--- a/cv-css.html
+++ b/cv-css.html
@@ -183,8 +183,7 @@
                         <br>
                         <li>
                             <b style="color:yellow">Hotel Management System using Python</b> <br>Feb 2021 - Apr 2021<br>
-                            <a href="https://github.com/YashP-0701/Hotel-Management-System-Project-in-Python-
-                            Tkinter-And-MySQL" style="color:aqua">Click Here</a>
+                            <a href="https://github.com/YashP-0701/Hotel-Management-System-Project-in-Python-Tkinter-And-MySQL.git" style="color:aqua">Click Here</a>
                             <p style="color: rgb(60, 255, 0)">
                                 This project is made purely in Python language and has a MySQL database in the backend.
                             </p>
