--- a/cv-css.html
+++ b/cv-css.html
@@ -31,7 +31,7 @@
             <div class="card">
                 <ul>
                     <li>
-                        <b style="color:yellow;">Bachelor of Engineering (B.E), Information Technology</b><br> Pillai College Of Engineering, New Panvel <br> 2019 - 2023 <br> CGPA: 9.66/10
+                        <b style="color:yellow;">Bachelor of Engineering (B.E), Information Technology</b><br> Pillai College Of Engineering, New Panvel (University of Mumbai) <br> 2019 - 2023 <br> CGPA: 9.66/10
                     </li>
                     <br>
                     <table border="1">
