--- a/cv-css.html
+++ b/cv-css.html
@@ -19,8 +19,8 @@
             <h1 class="animate"><b>Yash Ajit Paddalwar</b></h1>
             <h4 style="padding-right: 10px;">
                 yash9096.p@gmail.com
-                <br>+91 9324066586
-                <br>Navi Mumbai
+                <br>+91 9324xxxxxx
+                
             </h4>
         </div>
     </div>
@@ -294,15 +294,6 @@
             </div>
 
         </header>
-    </div>
-    <div class="right">
-        <div class="inner">
-            <h3 class="headings">LOCATION</h3>
-            <div class="card">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1052.4658332707936!2d73.01528914967423!3d19.037782643748653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c3e82f4327b3%3A0x5792ff9221701cbd!2sSector%2010%2C%20Nerul%2C%20Navi%20Mumbai%2C%20Maharashtra%20400706!5e0!3m2!1sen!2sin!4v1629307406251!5m2!1sen!2sin"
-                    style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-        </div>
     </div>
 
 </body>
